--- a/inline.html
+++ b/inline.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Inline styling </tilte>
+<title> Inline styling </title>
 </head>
 <body>
 <h1 style ="color: red; font-size:18px;">
